--- a/DevQuest-service/src/main/resources/templates/member/signin.html
+++ b/DevQuest-service/src/main/resources/templates/member/signin.html
@@ -110,25 +110,43 @@
 
 <div class="container">
   <h1>로그인</h1>
-  <form th:action="@{/member/signin}" th:object="${signinRequest}" method="post">
+  <form th:object="${signinRequest}" method="post">
     <div th:if="${param.error}" class="error">
       이메일 또는 비밀번호를 확인하세요
     </div>
     <div class="input-box">
       <input th:field="*{email}" type="email" placeholder="이메일을 입력해주세요">
       <input th:field="*{password}" type="password" placeholder="비밀번호를 입력해주세요">
-      <label style="display: inline-flex; align-items: center; gap: 0.5em;">
-        <input type="checkbox" name="remember-me"/>
-        로그인 상태 유지
-      </label>
     </div>
 
-    <button type="submit" class="submit">로그인 →</button>
+    <button id="btnForm" class="submit" type="button" name="action">로그인 →</button>
   </form>
   <div class="links">
     <a href="/signup">회원가입</a>
     <a href="#">ID/PW 찾기</a>
   </div>
 </div>
+
+<script>
+  document.querySelector("#btnForm").addEventListener("click", async ev => {
+    const email = document.querySelector("#email").value;
+    const password = document.querySelector("#password").value;
+
+    const res = await fetch("/auth/signin", {
+      method: "POST",
+      body: JSON.stringify({"email":email, "password":password}),
+      headers:{
+        "Content-Type":"application/json"
+      }
+    });
+
+    if(!res.ok){
+      const data = await res.json()
+      alert(data.message)
+    }
+
+    if(res.ok) location.href = "/dashboard";
+  })
+</script>
 </body>
 </html>
