--- a/DevQuest-service/src/main/resources/templates/fragments/admin-header.html
+++ b/DevQuest-service/src/main/resources/templates/fragments/admin-header.html
@@ -14,7 +14,7 @@
       </a>
     </div>
     <div class="top-menu">
-      <form id="logoutForm" th:action="@{/logout}" method="post"></form>
+      <form id="logoutForm" th:action="@{/auth/logout}" method="post"></form>
       <span class="logout" onclick="document.getElementById('logoutForm').submit()">로그아웃</span>
     </div>
   </div>
